[gd_scene load_steps=104 format=2]

[ext_resource path="res://assets/Woodcutter/Woodcutter_idle.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Woodcutter/Woodcutter_walk.png" type="Texture" id=3]
[ext_resource path="res://assets/Woodcutter/Woodcutter_jump.png" type="Texture" id=4]
[ext_resource path="res://assets/Woodcutter/Woodcutter_attack1.png" type="Texture" id=5]
[ext_resource path="res://assets/Woodcutter/Woodcutter_run.png" type="Texture" id=6]
[ext_resource path="res://assets/Cyborg/Cyborg_idle.png" type="Texture" id=7]
[ext_resource path="res://assets/Cyborg/Cyborg_run.png" type="Texture" id=8]
[ext_resource path="res://assets/Woodcutter/Woodcutter_hurt.png" type="Texture" id=9]
[ext_resource path="res://assets/Cyborg/Cyborg_hurt.png" type="Texture" id=10]
[ext_resource path="res://assets/Cyborg/Cyborg_attack1.png" type="Texture" id=11]
[ext_resource path="res://assets/Cyborg/Cyborg_jump.png" type="Texture" id=12]
[ext_resource path="res://assets/Biker/Biker_hurt.png" type="Texture" id=13]
[ext_resource path="res://assets/Biker/Biker_attack1.png" type="Texture" id=14]
[ext_resource path="res://assets/Biker/Biker_idle.png" type="Texture" id=15]
[ext_resource path="res://assets/Biker/Biker_run.png" type="Texture" id=16]
[ext_resource path="res://assets/Biker/Biker_jump.png" type="Texture" id=17]
[ext_resource path="res://assets/Cyborg/Cyborg_doublejump.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 54 ) ],
"loop": true,
"name": "morph",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 3.5, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 11 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 18 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 18 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 18 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 56 ) ],
"loop": true,
"name": "morph",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "djump",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 15 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 15 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 15 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 17 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 14 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 14 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 16 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 16 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 16 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=80]
animations = [ {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ), SubResource( 78 ) ],
"loop": true,
"name": "morph",
"speed": 5.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 2 )
gravity = 1000.0
speed = Vector2( 500, 3000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -18, 16 )
shape = SubResource( 1 )

[node name="animWoodCutter" type="AnimatedSprite" parent="."]
position = Vector2( -18, 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "idle"
offset = Vector2( 9, -8 )

[node name="Position2D" type="Position2D" parent="animWoodCutter"]
position = Vector2( 16.5, 1 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D" type="Area2D" parent="animWoodCutter"]
position = Vector2( 26.5, 0 )
collision_mask = 2

[node name="areaAttack" type="CollisionShape2D" parent="animWoodCutter/Area2D"]
shape = SubResource( 26 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -188 )
current = true

[node name="dashInit" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="dashRelay" type="Timer" parent="."]
wait_time = 0.5

[node name="cyberDude" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -17, 16 )
scale = Vector2( 2, 2 )
frames = SubResource( 37 )
animation = "djump"
offset = Vector2( 9, -8 )

[node name="biker" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -13, 17 )
scale = Vector2( 2, 2 )
frames = SubResource( 80 )
animation = "attack"
offset = Vector2( 9, -8 )

[connection signal="animation_finished" from="animWoodCutter" to="." method="_on_animWoodCutter_animation_finished"]
[connection signal="timeout" from="dashInit" to="." method="_on_dashInit_timeout"]
[connection signal="timeout" from="dashRelay" to="." method="_on_dashRelay_timeout"]
[connection signal="animation_finished" from="cyberDude" to="." method="_on_cyberDude_animation_finished"]
[connection signal="animation_finished" from="biker" to="." method="_on_biker_animation_finished"]
